--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,6 +17,7 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link rel="icon" href="./favicon2.ico" />
     <title>Stock Overflow</title>
   </head>
   <body>
